<resources>
    <string name="app_name">Hike menu calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Счетчик продуктов</string>
    <string name="nav_header_subtitle">Инструмент организатора похода</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="this_hike">Текущий поход</string>
    <string name="all_products">Список продуктов</string>
    <string name="list_of_people">Список людей</string>
    <string name="equipment_list">Список снаряжения</string>
    <string name="hiking_archive">Архив походов</string>
    <string-array name="type_of_meal">
        <item>Завтрак</item>
        <item>Обед</item>
        <item>Ужин</item>
        <item>Перекус</item>
        <item>Специи</item>
    </string-array>
    <string-array name="number_of_snacks">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="number_of_day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="list_participant">
        <item>Участник 1</item>
        <item>Участник 2</item>
        <item>Участник 3</item>
        <item>Участник 4</item>
        <item>Участник 5</item>
        <item>Участник 6</item>
    </string-array>
    <string-array name="gender_selection">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
</resources>