<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/this_hike"
            android:icon="@drawable/baseline_assistant_navigation_24"
            android:title="@string/this_hike" />
        <item
            android:id="@+id/food_list"
            android:icon="@drawable/baseline_checklist_24"
            android:title="@string/all_products" />
        <item
            android:id="@+id/list_of_participants"
            android:icon="@drawable/baseline_cruelty_free_24"
            android:title="@string/list_of_people" />
        <item
            android:id="@+id/equipment_list"
            android:icon="@drawable/baseline_carpenter_24"
            android:title="@string/equipment_list" />
        <item
            android:id="@+id/hiking_archive"
            android:icon="@drawable/baseline_perm_media_24"
            android:title="@string/hiking_archive" />
    </group>
</menu>