<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/this_hike">

    <fragment
        android:id="@+id/this_hike"
        android:name="com.example.hike_menu_calculator.ui.this_hike.ThisHikeFragment"
        android:label="@string/this_hike"
        tools:layout="@layout/fragment_this_hike" >
        <action
            android:id="@+id/action_this_hike_to_listOfPurchasedProductsFragment"
            app:destination="@id/thisHikeListOfProductsFragment" />
        <action
            android:id="@+id/action_this_hike_to_viewingPeopleFragment"
            app:destination="@id/thisHikeListOfParticipantsFragment" />
        <action
            android:id="@+id/action_this_hike_to_viewTheMenuFragment"
            app:destination="@id/viewTheMenuFragment" />
        <action
            android:id="@+id/action_this_hike_to_thisHikeListOfEquipmentFragment"
            app:destination="@id/thisHikeListOfEquipmentFragment" />
        <action
            android:id="@+id/action_this_hike_to_createHikeSetTheNumberOfDayFragment"
            app:destination="@id/createHikeSetTheNumberOfDayFragment" />
    </fragment>

    <fragment
        android:id="@+id/food_list"
        android:name="com.example.hike_menu_calculator.ui.food_list.FoodListFragment"
        android:label="@string/all_products"
        tools:layout="@layout/fragment_type_food_list" >
        <action
            android:id="@+id/action_food_list_to_selectionFoodListFragment"
            app:destination="@id/selectionFoodListFragment" />
    </fragment>

    <fragment
        android:id="@+id/list_of_participants"
        android:name="com.example.hike_menu_calculator.ui.list_of_participants.ListOfParticipantsFragment"
        android:label="@string/list_of_people"
        tools:layout="@layout/fragment_list_of_participants" >
        <action
            android:id="@+id/action_list_of_participants_to_addingAParticipantFragment"
            app:destination="@id/addingAParticipantFragment" />
    </fragment>
    <fragment
        android:id="@+id/equipment_list"
        android:name="com.example.hike_menu_calculator.ui.list_of_equipment.EquipmentListFragment"
        android:label="@string/equipment_list"
        tools:layout="@layout/fragment_equipment_list" >
        <action
            android:id="@+id/action_equipment_list_to_addingEquipmentFragment"
            app:destination="@id/addingEquipmentFragment" />
    </fragment>
    <fragment
        android:id="@+id/hiking_archive"
        android:name="com.example.hike_menu_calculator.ui.hike_archive.HikeArchiveFragment"
        android:label="@string/hiking_archive"
        tools:layout="@layout/fragment_hike_archive" >
        <action
            android:id="@+id/action_hiking_archive_to_viewingAHikeFragment"
            app:destination="@id/archiveHikeViewingFragment" />
    </fragment>
    <fragment
        android:id="@+id/createHikeParticipantFragment"
        android:name="com.example.hike_menu_calculator.ui.create_hike_participant.CreateHikeParticipantFragment"
        android:label="Добавление участников похода"
        tools:layout="@layout/fragment_create_hike_participant" >
        <action
            android:id="@+id/action_createHikeParticipantFragment_to_createHikeEquipmentFragment"
            app:destination="@id/createHikeEquipmentFragment" />
    </fragment>
    <fragment
        android:id="@+id/thisHikeListOfProductsFragment"
        android:name="com.example.hike_menu_calculator.ui.this_hike_list_of_products.ThisHikeListOfProductsFragment"
        android:label="Список продуктов в поход"
        tools:layout="@layout/fragment_this_hike_list_of_products" >
        <action
            android:id="@+id/action_listOfPurchasedProductsFragment_to_this_hike"
            app:destination="@id/this_hike" />
        <action
            android:id="@+id/action_thisHikeListOfProductsFragment_to_passOnOneThingFragment"
            app:destination="@id/passOnOneThingFragment" />
        <action
            android:id="@+id/action_thisHikeListOfProductsFragment_to_addCommentFragment"
            app:destination="@id/addCommentFragment" />
    </fragment>
    <fragment
        android:id="@+id/thisHikeListOfParticipantsFragment"
        android:name="com.example.hike_menu_calculator.ui.this_hike_list_of_participants.ThisHikeListOfParticipantsFragment"
        android:label="Список учасников и их груза"
        tools:layout="@layout/fragment_this_hike_list_of_participants" >
        <action
            android:id="@+id/action_viewingPeopleFragment_to_this_hike"
            app:destination="@id/this_hike" />
        <action
            android:id="@+id/action_thisHikeListOfParticipantsFragment_to_viewingABackpackFragment"
            app:destination="@id/viewingABackpackFragment" />
    </fragment>
    <fragment
        android:id="@+id/viewTheMenuFragment"
        android:name="com.example.hike_menu_calculator.ui.view_the_menu.ViewTheMenuFragment"
        android:label="Меню"
        tools:layout="@layout/fragment_view_the_menu" >
        <action
            android:id="@+id/action_viewTheMenuFragment_to_this_hike"
            app:destination="@id/this_hike" />
        <action
            android:id="@+id/action_viewTheMenuFragment_to_watchingASingleMealFragment"
            app:destination="@id/watchingASingleMealFragment" />
    </fragment>
    <fragment
        android:id="@+id/addingATypeListProductFragment"
        android:name="com.example.hike_menu_calculator.ui.adding_a_type_list_product.AddingATypeListProductFragment"
        android:label="Добавить новый тип продуктов"
        tools:layout="@layout/fragment_adding_a__type_list_product" />
    <fragment
        android:id="@+id/viewingTheProductFragment"
        android:name="com.example.hike_menu_calculator.ui.viewing_the_product.ViewingTheProductFragment"
        android:label="Добавить продукт"
        tools:layout="@layout/fragment_viewing_the_product" >
        <action
            android:id="@+id/action_viewingTheProductFragment_to_listProductFragment"
            app:destination="@id/listProductFragment" />
        <action
            android:id="@+id/action_viewingTheProductFragment_to_listAllProductsFragment"
            app:destination="@id/listAllProductsFragment" />
        <action
            android:id="@+id/action_viewingTheProductFragment_to_addThisProductInSomeListProductFragment"
            app:destination="@id/addThisProductInSomeListProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/addingAParticipantFragment"
        android:name="com.example.hike_menu_calculator.ui.adding_a_participant.AddingAParticipantFragment"
        android:label="Добавить участника"
        tools:layout="@layout/fragment_adding_a_participant" >
        <action
            android:id="@+id/action_addingAParticipantFragment_to_list_of_participants"
            app:destination="@id/list_of_participants" />
    </fragment>
    <fragment
        android:id="@+id/addingEquipmentFragment"
        android:name="com.example.hike_menu_calculator.ui.adding_equipment.AddingEquipmentFragment"
        android:label="Добавить снаряжение"
        tools:layout="@layout/fragment_adding_equipment" >
        <action
            android:id="@+id/action_addingEquipmentFragment_to_equipment_list"
            app:destination="@id/equipment_list" />
    </fragment>
    <fragment
        android:id="@+id/archiveHikeViewingFragment"
        android:name="com.example.hike_menu_calculator.ui.archive_hike_viewing.ArchiveHikeViewingFragment"
        android:label="Архивный поход"
        tools:layout="@layout/fragment_viewing_a_hike" >
        <action
            android:id="@+id/action_viewingAHikeFragment_to_viewingPeopleFromTheArchiveFragment"
            app:destination="@id/archiveHikeMenuFragment" />
        <action
            android:id="@+id/action_viewingAHikeFragment_to_hiking_archive"
            app:destination="@id/hiking_archive" />
        <action
            android:id="@+id/action_viewingAHikeFragment_to_archiveHikeParticipantFragment"
            app:destination="@id/archiveHikeParticipantFragment" />
        <action
            android:id="@+id/action_archiveHikeViewingFragment_to_archiveHikeEquipmentFragment"
            app:destination="@id/archiveHikeEquipmentFragment" />
        <action
            android:id="@+id/action_archiveHikeViewingFragment_to_archiveHikeProductsFragment"
            app:destination="@id/archiveHikeProductsFragment" />
    </fragment>
    <fragment
        android:id="@+id/archiveHikeParticipantFragment"
        android:name="com.example.hike_menu_calculator.ui.archive_hike_participant.ArchiveHikeParticipantFragment"
        android:label="Учасники похода и их груз"
        tools:layout="@layout/fragment_viewing_people_from_the_archive" >
        <action
            android:id="@+id/action_viewingPeopleFromTheArchiveFragment_to_viewingAHikeFragment"
            app:destination="@id/archiveHikeViewingFragment" />
        <action
            android:id="@+id/action_archiveHikeParticipantFragment_to_archiveViewingABackpackFragment"
            app:destination="@id/archiveViewingABackpackFragment" />
    </fragment>
    <fragment
        android:id="@+id/archiveHikeMenuFragment"
        android:name="com.example.hike_menu_calculator.ui.archive_hike_menu.ArchiveHikeMenuFragment"
        android:label="Меню"
        tools:layout="@layout/fragment_archive_hike_menu" >
        <action
            android:id="@+id/action_viewingTheMenuInTheArchiveFragment_to_viewingAHikeFragment"
            app:destination="@id/archiveHikeViewingFragment" />
        <action
            android:id="@+id/action_archiveHikeMenuFragment_to_archiveViewingASingleMealFragment"
            app:destination="@id/archiveViewingASingleMealFragment" />
    </fragment>
    <fragment
        android:id="@+id/listProductFragment"
        android:name="com.example.hike_menu_calculator.ui.list_product.ListProductFragment"
        android:label="Список типов продуктов"
        tools:layout="@layout/fragment_list_product" >
        <action
            android:id="@+id/action_listProductFragment_to_viewingTheProductFragment"
            app:destination="@id/viewingTheProductFragment" />
        <action
            android:id="@+id/action_listProductFragment_to_addingATypeListProductFragment"
            app:destination="@id/addingATypeListProductFragment" />
        <action
            android:id="@+id/action_listProductFragment_to_addProductsInListFragment"
            app:destination="@id/addProductsInListFragment" />
        <action
            android:id="@+id/action_listProductFragment_to_selectionFoodListFragment"
            app:destination="@id/selectionFoodListFragment" />
    </fragment>
    <fragment
        android:id="@+id/listAllProductsFragment"
        android:name="com.example.hike_menu_calculator.ui.list_all_products.ListAllProductsFragment"
        android:label="Все продукты"
        tools:layout="@layout/fragment_list_all_products" >
        <action
            android:id="@+id/action_listAllProductsFragment_to_viewingTheProductFragment"
            app:destination="@id/viewingTheProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/addProductsInListFragment"
        android:name="com.example.hike_menu_calculator.ui.add_products_in_list.AddProductsInListFragment"
        android:label="Присвоить продуктам этот тип"
        tools:layout="@layout/fragment_add_products_in_list" >
        <action
            android:id="@+id/action_addProductsInListFragment_to_listProductFragment"
            app:destination="@id/listProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/addThisProductInSomeListProductFragment"
        android:name="com.example.hike_menu_calculator.ui.add_this_product_in_some_list_product.AddThisProductInSomeListProductFragment"
        android:label="Присвоить продукту эти типы"
        tools:layout="@layout/fragment_add_this_product_in_some_list_product" >
        <action
            android:id="@+id/action_addThisProductInSomeListProductFragment_to_viewingTheProductFragment"
            app:destination="@id/viewingTheProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/thisHikeListOfEquipmentFragment"
        android:name="com.example.hike_menu_calculator.ui.this_hike_list_of_equipment.ThisHikeListOfEquipmentFragment"
        android:label="Список снаряжения в походе"
        tools:layout="@layout/fragment_this_hike_list_of_equipment" >
        <action
            android:id="@+id/action_thisHikeListOfEquipmentFragment_to_this_hike"
            app:destination="@id/this_hike" />
        <action
            android:id="@+id/action_thisHikeListOfEquipmentFragment_to_passOnOneThingFragment"
            app:destination="@id/passOnOneThingFragment" />
    </fragment>
    <fragment
        android:id="@+id/archiveHikeEquipmentFragment"
        android:name="com.example.hike_menu_calculator.ui.archive_hike_equipment.ArchiveHikeEquipmentFragment"
        android:label="Список снаряжения в походе"
        tools:layout="@layout/fragment_archive_hike_equipment" >
        <action
            android:id="@+id/action_archiveHikeEquipmentFragment_to_archiveHikeViewingFragment"
            app:destination="@id/archiveHikeViewingFragment" />
    </fragment>
    <fragment
        android:id="@+id/archiveHikeProductsFragment"
        android:name="com.example.hike_menu_calculator.ui.archive_hike_products.ArchiveHikeProductsFragment"
        android:label="Список продуктов"
        tools:layout="@layout/fragment_archive_hike_products" >
        <action
            android:id="@+id/action_archiveHikeProductsFragment_to_archiveHikeViewingFragment"
            app:destination="@id/archiveHikeViewingFragment" />
    </fragment>
    <fragment
        android:id="@+id/createHikeEquipmentFragment"
        android:name="com.example.hike_menu_calculator.ui.create_hike_equipment.CreateHikeEquipmentFragment"
        android:label="Выбор снаряжения"
        tools:layout="@layout/fragment_create_hike_equipment" >
        <action
            android:id="@+id/action_createHikeEquipmentFragment_to_createHikeProductsInListFragment"
            app:destination="@id/createHikeProductsInListFragment" />
    </fragment>
    <fragment
        android:id="@+id/createHikeProductsInListFragment"
        android:name="com.example.hike_menu_calculator.ui.create_hike_products.CreateHikeProductsFragment"
        android:label="Выбрать продукты"
        tools:layout="@layout/fragment_create_hike_products_in_list" >
        <action
            android:id="@+id/action_createHikeProductsInListFragment_to_this_hike"
            app:destination="@id/this_hike" />
    </fragment>
    <fragment
        android:id="@+id/createHikeSetTheNumberOfDayFragment"
        android:name="com.example.hike_menu_calculator.ui.create_hike_set_the_number_of_day.CreateHikeSetTheNumberOfDayFragment"
        android:label="Задать продолжительность похода"
        tools:layout="@layout/fragment_create_hike_set_the_number_of_day" >
        <action
            android:id="@+id/action_createHikeSetTheNumberOfDayFragment_to_createHikeParticipantFragment"
            app:destination="@id/createHikeParticipantFragment" />
    </fragment>
    <fragment
        android:id="@+id/watchingASingleMealFragment"
        android:name="com.example.hike_menu_calculator.ui.watching_a_single_meal.WatchingASingleMealFragment"
        android:label="Прием пищи"
        tools:layout="@layout/fragment_watching_a_single_meal" >
        <action
            android:id="@+id/action_watchingASingleMealFragment_to_viewTheMenuFragment"
            app:destination="@id/viewTheMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/viewingABackpackFragment"
        android:name="com.example.hike_menu_calculator.ui.viewing_a_backpack.ViewingABackpackFragment"
        android:label="Список груза участника"
        tools:layout="@layout/fragment_viewing_a_backpack" >
        <action
            android:id="@+id/action_viewingABackpackFragment_to_thisHikeListOfParticipantsFragment"
            app:destination="@id/thisHikeListOfParticipantsFragment" />
        <action
            android:id="@+id/action_viewingABackpackFragment_to_passOnOneThingFragment"
            app:destination="@id/passOnOneThingFragment" />
    </fragment>
    <fragment
        android:id="@+id/passOnOneThingFragment"
        android:name="com.example.hike_menu_calculator.ui.pass_on_one_thing.PassOnOneThingFragment"
        android:label="Передать груз"
        tools:layout="@layout/fragment_pass_on_one_thing" >
        <action
            android:id="@+id/action_passOnOneThingFragment_to_viewingABackpackFragment"
            app:destination="@id/viewingABackpackFragment" />
    </fragment>
    <fragment
        android:id="@+id/archiveViewingASingleMealFragment"
        android:name="com.example.hike_menu_calculator.ui.archive_viewing_a_single_meal.ArchiveViewingASingleMealFragment"
        android:label="Прием пищи"
        tools:layout="@layout/fragment_archive_viewing_a_single_meal" />
    <fragment
        android:id="@+id/archiveViewingABackpackFragment"
        android:name="com.example.hike_menu_calculator.ui.archive_viewing_backpack.ArchiveViewingABackpackFragment"
        android:label="Просмотр рюкзака"
        tools:layout="@layout/fragment_archive_viewing_a_backpack" />
    <fragment
        android:id="@+id/addCommentFragment"
        android:name="com.example.hike_menu_calculator.ui.add_comment.AddCommentFragment"
        android:label="Добавить комметарий"
        tools:layout="@layout/fragment_add_comment" >
        <action
            android:id="@+id/action_addCommentFragment_to_thisHikeListOfProductsFragment"
            app:destination="@id/thisHikeListOfProductsFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectionFoodListFragment"
        android:name="com.example.hike_menu_calculator.ui.selection_food_list.SelectionFoodListFragment"
        android:label="Списки продуктов в приемах пищи"
        tools:layout="@layout/fragment_selection_food_list" >
        <action
            android:id="@+id/action_selectionFoodListFragment_to_addingATypeListProductFragment"
            app:destination="@id/addingATypeListProductFragment" />
        <action
            android:id="@+id/action_selectionFoodListFragment_to_listProductFragment"
            app:destination="@id/listProductFragment" />
        <action
            android:id="@+id/action_selectionFoodListFragment_to_viewingTheProductFragment"
            app:destination="@id/viewingTheProductFragment" />
        <action
            android:id="@+id/action_selectionFoodListFragment_to_listAllProductsFragment"
            app:destination="@id/listAllProductsFragment" />
    </fragment>

</navigation>